# glabels-qt

./: CMakeLists.txt  README.md
backends/barcode/: Backends.cpp
cmake/Modules/: FindLibZint.cmake
glabels/: CMakeLists.txt  LabelEditor.cpp  MainWindow.cpp  ObjectEditor.cpp  ObjectEditor.h  Preview.cpp  SimplePreview.cpp  fieldoptions.cpp  fieldoptions.h  main.cpp
glabels-batch/: main.cpp
glabels/ui/: ObjectEditor.ui  fieldbuttons.ui
glbarcode/: BarcodeCode39.cpp  Constants.h
libs/include/: zint.h
model/: Constants.h  PageRenderer.cpp  PageRenderer.h
templates/: CMakeLists.txt  categories.xml  paper-sizes.xml  vendors.xml
translations/: glabels_C.ts  glabels_zh_CN.ts  templates_C.ts
